--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,32 +7,33 @@
     tools:context=".MainActivity">
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/radioGroupInput"
         android:layout_width="308dp"
         android:layout_height="78dp"
-        android:layout_marginBottom="152dp"
         android:baselineAligned="false"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.776">
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/outputFahrenheit"
             android:layout_width="114dp"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="Fahrenheit" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/outputKelvin"
             android:layout_width="99dp"
             android:layout_height="wrap_content"
             android:text="Kelvin" />
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/outputCelsius"
             android:layout_width="96dp"
             android:layout_height="wrap_content"
             android:text="Celsius" />
@@ -55,41 +56,46 @@
         app:layout_constraintVertical_bias="0.053" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText"
+        android:id="@+id/TemperatureInput"
         android:layout_width="297dp"
         android:layout_height="42dp"
         android:hint="your temperature"
-        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.447"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.229" />
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/radioGroupOutput"
         android:layout_width="308dp"
         android:layout_height="78dp"
-        android:layout_marginBottom="416dp"
         android:baselineAligned="false"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.329">
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/inputFahrenheit"
             android:layout_width="116dp"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="Fahrenheit" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/inputKelvin"
             android:layout_width="106dp"
             android:layout_height="wrap_content"
             android:text="Kelvin" />
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/inputCelsius"
             android:layout_width="139dp"
             android:layout_height="wrap_content"
             android:text="Celsius" />
@@ -100,24 +106,48 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Input temperature"
-        app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="72dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.19"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.167" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Output temperature"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="405dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.653" />
 
     <Button
         android:id="@+id/ConvertButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="335dp" />
+        android:layout_marginTop="180dp"
+        android:text="Convert"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.399" />
+
+    <TextView
+        android:id="@+id/OutputTemperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.89" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
